hackish fix to allow ql:quickloads in notebooks

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:66dc808a8bd76abfaa64455c2e075635f64aeb67cce93adf07eb26889b396468"
+  "signature": "sha256:88b391c979605ef734e3cc24576126692e82d08a150eb4353fc0b27086e988d6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,9 +21,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "> (C) 2015 Frederic Peschanski -- CC-BY-SA 3.0"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "This document is a short presentation of *Fishbowl* which is, technically-speaking, a Common Lisp implementation of an IPython kernel. So what does this means in practice ?  Let's see.\n",
-      "\n",
-      "(C) 2015 Frederic Peschanski -- CC-BY-SA 3.0"
+      "\n"
      ]
     },
     {
@@ -136,7 +142,7 @@
        "stream": "stderr",
        "text": [
         "DIVISION-BY-ZERO: \n",
-        "  #<DIVISION-BY-ZERO {1007988493}>\n"
+        "  #<DIVISION-BY-ZERO {1006865443}>\n"
        ]
       },
       {
@@ -254,13 +260,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "(1 1 2 3 5 8 13 21 34 55)"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -287,7 +293,8 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "(3/2 5/3 8/5 13/8 21/13 34/21 55/34 89/55 144/89 233/144 377/233 610/377 987/610 1597/987 2584/1597 4181/2584 6765/4181 10946/6765)"
+        "(3/2 5/3 8/5 13/8 21/13 34/21 55/34 89/55 144/89 233/144 377/233 610/377\n",
+        " 987/610 1597/987 2584/1597 4181/2584 6765/4181 10946/6765)"
        ]
       }
      ],
@@ -314,7 +321,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 8,
        "text": [
         "(1.5 1.6666666 1.6 1.625 1.6153846 1.6190476 1.617647 1.6181818 1.6179775\n",
         " 1.6180556 1.6180258 1.6180371 1.6180328 1.6180345 1.6180338 1.618034 1.618034\n",
@@ -322,7 +329,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -344,13 +351,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 9,
        "text": [
         "1.618034"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -433,13 +440,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 10,
        "text": [
         "#<PACKAGE \"FISHBOWL-USER\">"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -471,14 +478,14 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 11,
        "text": [
         "\"this is a string with a\n",
         "new line\""
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -502,13 +509,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 1,
+       "prompt_number": 12,
        "text": [
         "#<STANDARD-CLASS CUSTOM-STRING>"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -523,13 +530,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 13,
        "text": [
         "CUSTOM-STRING"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -559,13 +566,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 14,
        "text": [
-        "#<STANDARD-METHOD RENDER-PLAIN (CUSTOM-STRING) {1007368573}>"
+        "#<STANDARD-METHOD RENDER-PLAIN (CUSTOM-STRING) {1006DDAD33}>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -587,13 +594,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 15,
        "text": [
         "\"this is a customized string with a\\n new line\""
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 15
     },
     {
      "cell_type": "heading",
@@ -634,13 +641,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 16,
        "text": [
-        "#<LATEX-TEXT {1007895863}>"
+        "#<LATEX-TEXT {1006ED5973}>"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -662,13 +669,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 1,
+       "prompt_number": 17,
        "text": [
         "SHOW-FRACTION"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -685,13 +692,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 18,
        "text": [
-        "#<LATEX-TEXT {1007872643}>"
+        "#<LATEX-TEXT {1006FD2613}>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -725,13 +732,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 19,
        "text": [
-        "#<HTML-TEXT {100685FF43}>"
+        "#<HTML-TEXT {1007001F53}>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -750,27 +757,15 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "To load \"cl-markup\":\n",
-        "  Load 1 ASDF system:\n",
-        "    cl-markup\n",
-        "\n",
-        "; Loading \"cl-markup\"\n",
-        "\n"
-       ]
-      },
-      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 20,
        "text": [
         "(\"cl-markup\")"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -796,13 +791,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 21,
        "text": [
-        "#<HTML-TEXT {1005FC8D73}>"
+        "#<HTML-TEXT {1007F48D73}>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -859,7 +854,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 22,
        "svg": [
         "<svg height=\"400\" width=\"450\">\n",
         "<path id=\"lineAB\" d=\"M 100 350 l 150 -300\" stroke=\"red\" stroke-width=\"3\" fill=\"none\" />\n",
@@ -881,11 +876,11 @@
         "</svg>"
        ],
        "text": [
-        "#<SVG-STR {1006ABA023}>"
+        "#<SVG-STR {1008016153}>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -904,27 +899,15 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "To load \"cl-svg\":\n",
-        "  Load 1 ASDF system:\n",
-        "    cl-svg\n",
-        "\n",
-        "; Loading \"cl-svg\"\n",
-        "\n"
-       ]
-      },
-      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 23,
        "text": [
         "(\"cl-svg\")"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -948,13 +931,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 50,
+       "prompt_number": 24,
        "text": [
         "*SCENE*"
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -969,7 +952,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 52,
+       "prompt_number": 25,
        "svg": [
         "<?xml version=\"1.0\" standalone=\"no\"?>\n",
         "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\" \n",
@@ -978,7 +961,7 @@
         "    xmlns=\"http://www.w3.org/2000/svg\"\n",
         "    xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
         "  <defs>\n",
-        "    <linearGradient id=\"linearGradient1055\" x1=\"0%\" y1=\"0%\" x2=\"100%\" y2=\"100%\">\n",
+        "    <linearGradient id=\"linearGradient1001\" x1=\"0%\" y1=\"0%\" x2=\"100%\" y2=\"100%\">\n",
         "      <stop stop-color=\"green\" stop-opacity=\"1.00\" offset=\"0%\"/>\n",
         "      <stop stop-color=\"blue\" stop-opacity=\"1.00\" offset=\"50%\"/>\n",
         "      <stop stop-color=\"red\" stop-opacity=\"1.00\" offset=\"100%\"/>\n",
@@ -987,15 +970,15 @@
         "  <title>\n",
         "    SVG test: gradients\n",
         "  </title>\n",
-        "  <rect x=\"10\" y=\"10\" height=\"200\" width=\"200\" fill=\"url(#linearGradient1055)\"/>\n",
+        "  <rect x=\"10\" y=\"10\" height=\"200\" width=\"200\" fill=\"url(#linearGradient1001)\"/>\n",
         "</svg>\n"
        ],
        "text": [
-        "#<SVG-STR {1006C02BE3}>"
+        "#<SVG-STR {1005AD2943}>"
        ]
       }
      ],
-     "prompt_number": 52
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -1016,7 +999,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 53,
+       "prompt_number": 26,
        "svg": [
         "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
         "<!-- Created with Inkscape (http://www.inkscape.org/) -->\n",
@@ -1737,11 +1720,11 @@
         "</svg>\n"
        ],
        "text": [
-        "#<SVG-STR {1006C332E3}>"
+        "#<SVG-STR {1005BC3323}>"
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 26
     },
     {
      "cell_type": "heading",
