--- a/about-cl-jupyter.ipynb
+++ b/about-cl-jupyter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fishbowl: an enhanced interactive Shell for Common Lisp"
+    "# cl-Jupyter: an enhanced interactive Shell for Common Lisp"
    ]
   },
   {
@@ -18,8 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This document is a short presentation of *Fishbowl* which is, technically-speaking, a Common Lisp implementation of an IPython kernel. So what does this means in practice ?  Let's see.\n",
-    "\n"
+    "This document is a short presentation of *cl-Jupyter* which is, technically-speaking, a Common Lisp implementation of a [Jupyter](http://www.jupyter.org) kernel. So what does this means in practice ?  Let's see."
    ]
   },
   {
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +58,7 @@
        "14"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +102,7 @@
        "NIL"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "DIVISION-BY-ZERO: \n",
-      "  #<DIVISION-BY-ZERO {1006865443}>\n"
+      "  #<DIVISION-BY-ZERO {10071FDFD3}>\n"
      ]
     },
     {
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -483,7 +482,7 @@
        "new line\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -878,10 +877,10 @@
        "</svg>"
       ],
       "text/plain": [
-       "#<SVG-STR {1008016153}>"
+       "#<SVG-STR {1007127973}>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -927,7 +926,7 @@
        "(\"cl-svg\")"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -949,7 +948,7 @@
        "*SCENE*"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -985,7 +984,7 @@
        "    xmlns=\"http://www.w3.org/2000/svg\"\n",
        "    xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "  <defs>\n",
-       "    <linearGradient id=\"linearGradient1001\" x1=\"0%\" y1=\"0%\" x2=\"100%\" y2=\"100%\">\n",
+       "    <linearGradient id=\"linearGradient891\" x1=\"0%\" y1=\"0%\" x2=\"100%\" y2=\"100%\">\n",
        "      <stop stop-color=\"green\" stop-opacity=\"1.00\" offset=\"0%\"/>\n",
        "      <stop stop-color=\"blue\" stop-opacity=\"1.00\" offset=\"50%\"/>\n",
        "      <stop stop-color=\"red\" stop-opacity=\"1.00\" offset=\"100%\"/>\n",
@@ -994,14 +993,14 @@
        "  <title>\n",
        "    SVG test: gradients\n",
        "  </title>\n",
-       "  <rect x=\"10\" y=\"10\" height=\"200\" width=\"200\" fill=\"url(#linearGradient1001)\"/>\n",
+       "  <rect x=\"10\" y=\"10\" height=\"200\" width=\"200\" fill=\"url(#linearGradient891)\"/>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "#<SVG-STR {1005AD2943}>"
+       "#<SVG-STR {1006902913}>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1747,10 +1746,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "#<SVG-STR {1005BC3323}>"
+       "#<SVG-STR {1006933133}>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
