started migration to 5.0, an issue with Ipython 3.2 (unreadable UTF-8 character)

--- a/about-cl-jupyter.ipynb
+++ b/about-cl-jupyter.ipynb
@@ -47,22 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(+ 2 12)"
    ]
@@ -84,29 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I compute (+ 2 12), yielding 14"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "NIL"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(format t \"I compute (+ 2 12), yielding ~A\" (+ 2 12))"
    ]
@@ -1856,8 +1827,12 @@
    "name": "lisp"
   },
   "language_info": {
+   "codemirror_mode": "text/x-common-lisp",
+   "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
-   "version": "1.2.7"
+   "nbconvert_exporter": "",
+   "pygments_lexer": "common-lisp",
+   "version": "X3J13"
   }
  },
  "nbformat": 4,
