--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
+Maxima-Jupyter Authors/Contributors
+===============================
+
+Robert Dodier -- creator and maintainer
+
 
 cl-Jupyter Authors/Contributors
 ===============================
