Move MAXIMA::RETRIEVE into src/shell.lisp and make kernel and shell variables lexical instead of special.

--- a/MaximaJupyterExample.ipynb
+++ b/MaximaJupyterExample.ipynb
@@ -68,6 +68,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Questions from Maxima to the user (via `asksign`) cause the notebook to open an input prompt and report the input back to the Maxima kernel. In the next example, let's try the same input twice and answer the question in different ways."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is k equal to - 1?\n",
+      "y\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\log u$$\n"
+      ],
+      "text/plain": [
+       "log(u)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate (u^k, u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\log u$$\n"
+      ],
+      "text/plain": [
+       "log(u)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate (u^k, u)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What about finding the roots of a polynomial?"
    ]
   },
