Update example notebook after s/meval/meval*/.

--- a/MaximaJupyterExample.ipynb
+++ b/MaximaJupyterExample.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
        "log(u)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,21 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is k equal to - 1?\n",
+      "n\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
-       "$$\\log u$$\n"
+       "$${{u^{1+k}}\\over{k+1}}$$\n"
       ],
       "text/plain": [
-       "log(u)"
+       "u^(k+1)/(1+k)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
