Strip trailing newlines from TeX output, since they cause trouble for nbconvert -- empty lines in equations cause errors.

--- a/MaximaJupyterExample.ipynb
+++ b/MaximaJupyterExample.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\sqrt{\\pi}$$\n"
+       "$$\\sqrt{\\pi}$$"
       ],
       "text/plain": [
        "sqrt(%pi)"
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\int_{a}^{b}{x\\,\\log x\\;dx}$$\n"
+       "$$\\int_{a}^{b}{x\\,\\log x\\;dx}$$"
       ],
       "text/plain": [
        "'integrate(x*log(x),x,a,b)"
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/latex": [
-       "$$\\log u$$\n"
+       "$$\\log u$$"
       ],
       "text/plain": [
        "log(u)"
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/latex": [
-       "$${{u^{1+k}}\\over{k+1}}$$\n"
+       "$${{u^{1+k}}\\over{k+1}}$$"
       ],
       "text/plain": [
        "u^(k+1)/(1+k)"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -156,14 +156,14 @@
       "text/latex": [
        "$$\\left[ x={{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}}\\over{2\n",
        " }} , x=-{{2^{{{1}\\over{3}}}+2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i}\\over{2}}\n",
-       "  , x=2^{{{1}\\over{3}}} \\right] $$\n"
+       "  , x=2^{{{1}\\over{3}}} \\right] $$"
       ],
       "text/plain": [
        "[x = (2^(1/3)*sqrt(3)*%i-2^(1/3))/2,x = -(2^(1/3)*sqrt(3)*%i+2^(1/3))/2,\n",
        " x = 2^(1/3)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -191,13 +191,13 @@
       "text/latex": [
        "$$\\left[ {{\\left(2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}\n",
        " \\right)^3}\\over{8}} , -{{\\left(2^{{{1}\\over{3}}}+2^{{{1}\\over{3}}}\\,\n",
-       " \\sqrt{3}\\,i\\right)^3}\\over{8}} , 2 \\right] $$\n"
+       " \\sqrt{3}\\,i\\right)^3}\\over{8}} , 2 \\right] $$"
       ],
       "text/plain": [
        "[(2^(1/3)*sqrt(3)*%i-2^(1/3))^3/8,-(2^(1/3)+2^(1/3)*sqrt(3)*%i)^3/8,2]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -223,13 +223,13 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[ 2 , 2 , 2 \\right] $$\n"
+       "$$\\left[ 2 , 2 , 2 \\right] $$"
       ],
       "text/plain": [
        "[2,2,2]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -255,13 +255,13 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[ 2 , 2 , 2 \\right] $$\n"
+       "$$\\left[ 2 , 2 , 2 \\right] $$"
       ],
       "text/plain": [
        "[2,2,2]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -750,7 +750,7 @@
        "'plot2d([sin,cos,tan],[x,-10,10],[y,-10,10])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -783,13 +783,13 @@
     {
      "data": {
       "text/latex": [
-       "$$\\mbox{ HELLO WORLD! }$$\n"
+       "$$\\mbox{ HELLO WORLD! }$$"
       ],
       "text/plain": [
        "\"HELLO WORLD!\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -832,13 +832,13 @@
     {
      "data": {
       "text/latex": [
-       "$$\\mathbf{true}$$\n"
+       "$$\\mathbf{true}$$"
       ],
       "text/plain": [
        "true"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
