--- a/MaximaJupyterExample.ipynb
+++ b/MaximaJupyterExample.ipynb
@@ -77,6 +77,37 @@
      "output_type": "stream",
      "text": [
       "Is k equal to - 1?\n",
+      "y\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\log u$$"
+      ],
+      "text/plain": [
+       "log(u)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate (u^k, u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is k equal to - 1?\n",
       "n\n"
      ]
     },
@@ -89,7 +120,7 @@
        "u^(k+1)/(k+1)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +153,7 @@
        " x = 2^(1/3)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +185,7 @@
        "[(2^(1/3)*sqrt(3)*%i-2^(1/3))^3/8,-(2^(1/3)*sqrt(3)*%i+2^(1/3))^3/8,2]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,36 +199,6 @@
    "metadata": {},
    "source": [
     "Well, it's still not obvious. Let's simplify a little."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$\\left[ 2 , 2 , 2 \\right] $$"
-      ],
-      "text/plain": [
-       "[2,2,2]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "map (radcan, bar)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's a different way to simplify."
    ]
   },
   {
@@ -220,6 +221,36 @@
     }
    ],
    "source": [
+    "map (radcan, bar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a different way to simplify."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left[ 2 , 2 , 2 \\right] $$"
+      ],
+      "text/plain": [
+       "[2,2,2]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "map (expand, bar)"
    ]
   },
@@ -232,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -755,10 +786,10 @@
        "\n"
       ],
       "text/plain": [
-       "[\"/tmp/maxout16356.gnuplot\",\"/tmp/maxplot.svg\"]"
+       "[\"/tmp/maxout19262.gnuplot\",\"/tmp/maxplot.svg\"]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +826,7 @@
        "\"HELLO WORLD!\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +873,7 @@
        "true"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
