Update example notebooks

--- a/MaximaJupyterExample.ipynb
+++ b/MaximaJupyterExample.ipynb
@@ -15,10 +15,10 @@
     {
      "data": {
       "text/latex": [
-       "$$\\sqrt{\\pi}$$"
+       "$$\\tag{${\\it \\%o}_{1}$}\\sqrt{\\pi}$$"
       ],
       "text/plain": [
-       "sqrt(%pi)\n"
+       "sqrt(%pi)"
       ]
      },
      "execution_count": 2,
@@ -45,16 +45,16 @@
     {
      "data": {
       "text/latex": [
-       "$$\\int_{a}^{b}{x\\,\\log x\\;dx}$$"
+       "$$\\tag{${\\it \\%o}_{2}$}\\int_{a}^{b}{x\\,\\log x\\;dx}$$"
       ],
       "text/plain": [
-       " b\n",
-       "/\n",
-       "[\n",
-       "I  x log(x) dx\n",
-       "]\n",
-       "/\n",
-       " a\n"
+       "b\n",
+       "                                /\n",
+       "                                [\n",
+       "                                I  x log(x) dx\n",
+       "                                ]\n",
+       "                                /\n",
+       "                                 a"
       ]
      },
      "execution_count": 3,
@@ -83,21 +83,28 @@
      "output_type": "stream",
      "text": [
       "Is k equal to - 1?\n",
-      "y\n"
+      "y;\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$$\\log u$$"
+       "$$\\tag{${\\it \\%o}_{3}$}\\log u$$"
       ],
       "text/plain": [
-       "log(u)\n"
+       "log(u)"
       ]
      },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -114,24 +121,31 @@
      "output_type": "stream",
      "text": [
       "Is k equal to - 1?\n",
-      "n\n"
+      "n;\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$${{u^{k+1}}\\over{k+1}}$$"
+       "$$\\tag{${\\it \\%o}_{4}$}{{u^{k+1}}\\over{k+1}}$$"
       ],
       "text/plain": [
-       " k + 1\n",
-       "u\n",
-       "------\n",
-       "k + 1\n"
+       "k + 1\n",
+       "                                    u\n",
+       "                                    ------\n",
+       "                                    k + 1"
       ]
      },
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -153,13 +167,13 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[ x={{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}}\\over{2}} , x=-{{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i+2^{{{1}\\over{3}}}}\\over{2}} , x=2^{{{1}\\over{3}}} \\right] $$"
+       "$$\\tag{${\\it \\%o}_{5}$}\\left[ x={{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}}\\over{2}} , x=-{{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i+2^{{{1}\\over{3}}}}\\over{2}} , x=2^{{{1}\\over{3}}} \\right] $$"
       ],
       "text/plain": [
-       "      1/3               1/3         1/3               1/3\n",
-       "     2    sqrt(3) %i - 2           2    sqrt(3) %i + 2          1/3\n",
-       "[x = ----------------------, x = - ----------------------, x = 2   ]\n",
-       "               2                             2\n"
+       "1/3               1/3         1/3               1/3\n",
+       "          2    sqrt(3) %i - 2           2    sqrt(3) %i + 2          1/3\n",
+       "     [x = ----------------------, x = - ----------------------, x = 2   ]\n",
+       "                    2                             2"
       ]
      },
      "execution_count": 6,
@@ -186,13 +200,13 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[ {{\\left(2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}\\right)^3}\\over{8}} , -{{\\left(2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i+2^{{{1}\\over{3}}}\\right)^3}\\over{8}} , 2 \\right] $$"
+       "$$\\tag{${\\it \\%o}_{6}$}\\left[ {{\\left(2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}\\right)^3}\\over{8}} , -{{\\left(2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i+2^{{{1}\\over{3}}}\\right)^3}\\over{8}} , 2 \\right] $$"
       ],
       "text/plain": [
-       "   1/3               1/3 3      1/3               1/3 3\n",
-       " (2    sqrt(3) %i - 2   )     (2    sqrt(3) %i + 2   )\n",
-       "[-------------------------, - -------------------------, 2]\n",
-       "             8                            8\n"
+       "1/3               1/3 3      1/3               1/3 3\n",
+       "           (2    sqrt(3) %i - 2   )     (2    sqrt(3) %i + 2   )\n",
+       "          [-------------------------, - -------------------------, 2]\n",
+       "                       8                            8"
       ]
      },
      "execution_count": 7,
@@ -219,10 +233,10 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[ 2 , 2 , 2 \\right] $$"
+       "$$\\tag{${\\it \\%o}_{7}$}\\left[ 2 , 2 , 2 \\right] $$"
       ],
       "text/plain": [
-       "[2, 2, 2]\n"
+       "[2, 2, 2]"
       ]
      },
      "execution_count": 8,
@@ -249,10 +263,10 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[ 2 , 2 , 2 \\right] $$"
+       "$$\\tag{${\\it \\%o}_{8}$}\\left[ 2 , 2 , 2 \\right] $$"
       ],
       "text/plain": [
-       "[2, 2, 2]\n"
+       "[2, 2, 2]"
       ]
      },
      "execution_count": 9,
@@ -823,10 +837,10 @@
     {
      "data": {
       "text/latex": [
-       "$$\\mbox{ HELLO WORLD! }$$"
+       "$$\\tag{${\\it \\%o}_{10}$}\\mbox{ HELLO WORLD! }$$"
       ],
       "text/plain": [
-       "HELLO WORLD!\n"
+       "HELLO WORLD!"
       ]
      },
      "execution_count": 11,
@@ -869,16 +883,19 @@
       " 3: erfc  (Error Function)\n",
       " 4: erfflag  (Functions and Variables for Integration)\n",
       " 5: erfi  (Error Function)\n",
-      " 6: nextlayerfactor  (Package facexp)Enter space-separated numbers, `all' or `none': 0\n"
+      " 6: nextlayerfactor  (Package facexp)\n",
+      "\n",
+      "\n",
+      "Enter space-separated numbers, `all' or `none': 0\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$$\\mathbf{true}$$"
+       "$$\\tag{${\\it \\%o}_{11}$}\\mathbf{true}$$"
       ],
       "text/plain": [
-       "true\n"
+       "true"
       ]
      },
      "execution_count": 12,
@@ -913,6 +930,7 @@
   },
   "language_info": {
    "codemirror_mode": "maxima",
+   "file_extension": ".mac",
    "mimetype": "text/x-maxima",
    "name": "maxima",
    "pygments_lexer": "maxima",
