--- a/MaximaJupyterTalk.ipynb
+++ b/MaximaJupyterTalk.ipynb
@@ -118,14 +118,14 @@
     {
      "data": {
       "text/latex": [
-       "$${{d^2}\\over{d\\,x^2}}\\,\\left({{1}\\over{\\sqrt{1-a\\,x^2}+1}}\\right)$$"
+       "$$\\tag{${\\it \\%o}_{1}$}{{d^2}\\over{d\\,x^2}}\\,\\left({{1}\\over{\\sqrt{1-a\\,x^2}+1}}\\right)$$"
       ],
       "text/plain": [
-       " 2\n",
-       "d            1\n",
-       "--- (------------------)\n",
-       "  2              2\n",
-       "dx   sqrt(1 - a x ) + 1\n"
+       "2\n",
+       "                           d            1\n",
+       "                           --- (------------------)\n",
+       "                             2              2\n",
+       "                           dx   sqrt(1 - a x ) + 1"
       ]
      },
      "execution_count": 2,
@@ -152,19 +152,19 @@
     {
      "data": {
       "text/latex": [
-       "$${{a}\\over{\\sqrt{1-a\\,x^2}\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^2}}+{{a^2\\,x^2}\\over{\\left(1-a\\,x^2\\right)^{{{3}\\over{2}}}\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^2}}+{{2\\,a^2\\,x^2}\\over{\\left(1-a\\,x^2\\right)\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^3}}$$"
+       "$$\\tag{${\\it \\%o}_{2}$}{{a}\\over{\\sqrt{1-a\\,x^2}\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^2}}+{{a^2\\,x^2}\\over{\\left(1-a\\,x^2\\right)^{{{3}\\over{2}}}\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^2}}+{{2\\,a^2\\,x^2}\\over{\\left(1-a\\,x^2\\right)\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^3}}$$"
       ],
       "text/plain": [
-       "                                                       2  2\n",
-       "                 a                                    a  x\n",
-       "------------------------------------ + -----------------------------------\n",
-       "            2               2      2           2 3/2              2      2\n",
-       "sqrt(1 - a x ) (sqrt(1 - a x ) + 1)    (1 - a x )    (sqrt(1 - a x ) + 1)\n",
+       "2  2\n",
+       "                  a                                    a  x\n",
+       " ------------------------------------ + -----------------------------------\n",
+       "             2               2      2           2 3/2              2      2\n",
+       " sqrt(1 - a x ) (sqrt(1 - a x ) + 1)    (1 - a x )    (sqrt(1 - a x ) + 1)\n",
        "                                                              2  2\n",
        "                                                           2 a  x\n",
        "                                             + --------------------------------\n",
        "                                                       2               2      3\n",
-       "                                               (1 - a x ) (sqrt(1 - a x ) + 1)\n"
+       "                                               (1 - a x ) (sqrt(1 - a x ) + 1)"
       ]
      },
      "execution_count": 3,
@@ -193,21 +193,28 @@
      "output_type": "stream",
      "text": [
       "Is k equal to - 1?\n",
-      "y\n"
+      "y;\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$$\\log x$$"
+       "$$\\tag{${\\it \\%o}_{3}$}\\log x$$"
       ],
       "text/plain": [
-       "log(x)\n"
+       "log(x)"
       ]
      },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -224,24 +231,31 @@
      "output_type": "stream",
      "text": [
       "Is k equal to - 1?\n",
-      "n\n"
+      "n;\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$${{x^{k+1}}\\over{k+1}}$$"
+       "$$\\tag{${\\it \\%o}_{4}$}{{x^{k+1}}\\over{k+1}}$$"
       ],
       "text/plain": [
-       " k + 1\n",
-       "x\n",
-       "------\n",
-       "k + 1\n"
+       "k + 1\n",
+       "                                    x\n",
+       "                                    ------\n",
+       "                                    k + 1"
       ]
      },
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -537,6 +551,7 @@
   },
   "language_info": {
    "codemirror_mode": "maxima",
+   "file_extension": ".mac",
    "mimetype": "text/x-maxima",
    "name": "maxima",
    "pygments_lexer": "maxima",
