Refactor override mechanism
- Add support for implicit_plot
- Add defover
- Add tests for plots
- Add :handle to make-maxima-result
- Use defover for plot2d, plot3d, julia and mandelbrot.
- Update notebooks for new plots
- Add PostScript support
- Handle and muffle warnings in `handling-errors`

--- a/MaximaJupyterTalk.ipynb
+++ b/MaximaJupyterTalk.ipynb
@@ -123,7 +123,7 @@
       "text/plain": [
        "                            2\n",
        "                           d            1\n",
-       "                           --- (------------------)\n",
+       "(%o1)                      --- (------------------)\n",
        "                             2              2\n",
        "                           dx   sqrt(1 - a x ) + 1"
       ]
@@ -155,16 +155,15 @@
        "$$\\tag{${\\it \\%o}_{2}$}{{a}\\over{\\sqrt{1-a\\,x^2}\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^2}}+{{a^2\\,x^2}\\over{\\left(1-a\\,x^2\\right)^{{{3}\\over{2}}}\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^2}}+{{2\\,a^2\\,x^2}\\over{\\left(1-a\\,x^2\\right)\\,\\left(\\sqrt{1-a\\,x^2}+1\\right)^3}}$$"
       ],
       "text/plain": [
-       "                                                        2  2\n",
-       "                  a                                    a  x\n",
-       " ------------------------------------ + -----------------------------------\n",
-       "             2               2      2           2 3/2              2      2\n",
-       " sqrt(1 - a x ) (sqrt(1 - a x ) + 1)    (1 - a x )    (sqrt(1 - a x ) + 1)\n",
-       "                                                              2  2\n",
-       "                                                           2 a  x\n",
-       "                                             + --------------------------------\n",
-       "                                                       2               2      3\n",
-       "                                               (1 - a x ) (sqrt(1 - a x ) + 1)"
+       "                       a\n",
+       "(%o2) ------------------------------------\n",
+       "                  2               2      2\n",
+       "      sqrt(1 - a x ) (sqrt(1 - a x ) + 1)\n",
+       "                         2  2                                 2  2\n",
+       "                        a  x                               2 a  x\n",
+       "       + ----------------------------------- + --------------------------------\n",
+       "                 2 3/2              2      2           2               2      3\n",
+       "         (1 - a x )    (sqrt(1 - a x ) + 1)    (1 - a x ) (sqrt(1 - a x ) + 1)"
       ]
      },
      "execution_count": 3,
@@ -202,7 +201,7 @@
        "$$\\tag{${\\it \\%o}_{3}$}\\log x$$"
       ],
       "text/plain": [
-       "                                    log(x)"
+       "(%o3)                               log(x)"
       ]
      },
      "execution_count": 4,
@@ -242,7 +241,7 @@
       "text/plain": [
        "                                     k + 1\n",
        "                                    x\n",
-       "                                    ------\n",
+       "(%o4)                               ------\n",
        "                                    k + 1"
       ]
      },
@@ -484,9 +483,8 @@
        "/tmp/maxplot.svg"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -498,7 +496,7 @@
     }
    ],
    "source": [
-    "plot2d (subst (a = 1, bar), [x, -2, 2], [y, -10, 10], [svg_file, \"maxplot.svg\"]);"
+    "plot2d (subst (a = 1, bar), [x, -2, 2], [y, -10, 10], [svg_file, \"maxplot.svg\"])$"
    ]
   },
   {
