--- a/MaximaJupyterExample.ipynb
+++ b/MaximaJupyterExample.ipynb
@@ -18,7 +18,7 @@
        "$$\\tag{${\\it \\%o}_{1}$}\\sqrt{\\pi}$$"
       ],
       "text/plain": [
-       "                                   sqrt(%pi)"
+       "(%o1)                              sqrt(%pi)"
       ]
      },
      "execution_count": 2,
@@ -51,7 +51,7 @@
        "                                 b\n",
        "                                /\n",
        "                                [\n",
-       "                                I  x log(x) dx\n",
+       "(%o2)                           I  x log(x) dx\n",
        "                                ]\n",
        "                                /\n",
        "                                 a"
@@ -92,7 +92,7 @@
        "$$\\tag{${\\it \\%o}_{3}$}\\log u$$"
       ],
       "text/plain": [
-       "                                    log(u)"
+       "(%o3)                               log(u)"
       ]
      },
      "execution_count": 4,
@@ -132,7 +132,7 @@
       "text/plain": [
        "                                     k + 1\n",
        "                                    u\n",
-       "                                    ------\n",
+       "(%o4)                               ------\n",
        "                                    k + 1"
       ]
      },
@@ -170,10 +170,10 @@
        "$$\\tag{${\\it \\%o}_{5}$}\\left[ x={{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i-2^{{{1}\\over{3}}}}\\over{2}} , x=-{{2^{{{1}\\over{3}}}\\,\\sqrt{3}\\,i+2^{{{1}\\over{3}}}}\\over{2}} , x=2^{{{1}\\over{3}}} \\right] $$"
       ],
       "text/plain": [
-       "           1/3               1/3         1/3               1/3\n",
-       "          2    sqrt(3) %i - 2           2    sqrt(3) %i + 2          1/3\n",
-       "     [x = ----------------------, x = - ----------------------, x = 2   ]\n",
-       "                    2                             2"
+       "            1/3               1/3         1/3               1/3\n",
+       "           2    sqrt(3) %i - 2           2    sqrt(3) %i + 2          1/3\n",
+       "(%o5) [x = ----------------------, x = - ----------------------, x = 2   ]\n",
+       "                     2                             2"
       ]
      },
      "execution_count": 6,
@@ -205,7 +205,7 @@
       "text/plain": [
        "             1/3               1/3 3      1/3               1/3 3\n",
        "           (2    sqrt(3) %i - 2   )     (2    sqrt(3) %i + 2   )\n",
-       "          [-------------------------, - -------------------------, 2]\n",
+       "(%o6)     [-------------------------, - -------------------------, 2]\n",
        "                       8                            8"
       ]
      },
@@ -236,7 +236,7 @@
        "$$\\tag{${\\it \\%o}_{7}$}\\left[ 2 , 2 , 2 \\right] $$"
       ],
       "text/plain": [
-       "                                   [2, 2, 2]"
+       "(%o7)                              [2, 2, 2]"
       ]
      },
      "execution_count": 8,
@@ -266,7 +266,7 @@
        "$$\\tag{${\\it \\%o}_{8}$}\\left[ 2 , 2 , 2 \\right] $$"
       ],
       "text/plain": [
-       "                                   [2, 2, 2]"
+       "(%o8)                              [2, 2, 2]"
       ]
      },
      "execution_count": 9,
@@ -806,9 +806,8 @@
        "/tmp/maxplot.svg"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -819,7 +818,7 @@
     }
    ],
    "source": [
-    "plot2d ([sin, cos, tan], [x, -10, 10], [y, -10, 10], [svg_file, \"maxplot.svg\"]);"
+    "plot2d ([sin, cos, tan], [x, -10, 10], [y, -10, 10], [svg_file, \"maxplot.svg\"])$"
    ]
   },
   {
@@ -840,7 +839,7 @@
        "$$\\tag{${\\it \\%o}_{10}$}\\mbox{ HELLO WORLD! }$$"
       ],
       "text/plain": [
-       "                                 HELLO WORLD!"
+       "(%o10)                           HELLO WORLD!"
       ]
      },
      "execution_count": 11,
@@ -895,7 +894,7 @@
        "$$\\tag{${\\it \\%o}_{11}$}\\mathbf{true}$$"
       ],
       "text/plain": [
-       "                                     true"
+       "(%o11)                               true"
       ]
      },
      "execution_count": 12,
